--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -550,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -717,7 +717,7 @@
        "python        2.852581e-06  1.344883e-07  2.987069e-06             3.782229"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -774,26 +774,160 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<style type=\"text/css\">\n",
+       "#T_86350 caption {\n",
+       "  color: black;\n",
+       "  font-size: 16px;\n",
+       "  text-align: center;\n",
+       "}\n",
+       "#T_86350 th {\n",
+       "  background-color: darkgreen;\n",
+       "  color: white;\n",
+       "  font-size: 14px;\n",
+       "}\n",
+       "#T_86350 td {\n",
+       "  font-size: 12px;\n",
+       "}\n",
+       "#T_86350_row0_col0, #T_86350_row1_col0, #T_86350_row2_col0, #T_86350_row3_col0, #T_86350_row4_col0, #T_86350_row5_col0, #T_86350_row6_col0, #T_86350_row8_col0, #T_86350_row9_col0, #T_86350_row10_col0, #T_86350_row11_col0, #T_86350_row12_col0, #T_86350_row13_col0, #T_86350_row14_col0 {\n",
+       "  background-color: white;\n",
+       "  color: black;\n",
+       "  border-color: black;\n",
+       "}\n",
+       "#T_86350_row7_col0 {\n",
+       "  background-color: lightgreen;\n",
+       "  background-color: white;\n",
+       "  color: black;\n",
+       "  border-color: black;\n",
+       "}\n",
+       "</style>\n",
+       "<table id=\"T_86350\">\n",
+       "  <caption>Energy Consumption in kWh</caption>\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th class=\"blank level0\" >&nbsp;</th>\n",
+       "      <th id=\"T_86350_level0_col0\" class=\"col_heading level0 col0\" >normed_total_energy</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th class=\"index_name level0\" >project_name</th>\n",
+       "      <th class=\"blank col0\" >&nbsp;</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row0\" class=\"row_heading level0 row0\" >csharp</th>\n",
+       "      <td id=\"T_86350_row0_col0\" class=\"data row0 col0\" >27.78</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row1\" class=\"row_heading level0 row1\" >d</th>\n",
+       "      <td id=\"T_86350_row1_col0\" class=\"data row1 col0\" >2.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row2\" class=\"row_heading level0 row2\" >c</th>\n",
+       "      <td id=\"T_86350_row2_col0\" class=\"data row2 col0\" >1.06</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row3\" class=\"row_heading level0 row3\" >cpp ranges</th>\n",
+       "      <td id=\"T_86350_row3_col0\" class=\"data row3 col0\" >1.03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row4\" class=\"row_heading level0 row4\" >cpp stl</th>\n",
+       "      <td id=\"T_86350_row4_col0\" class=\"data row4 col0\" >1.00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row5\" class=\"row_heading level0 row5\" >ruby</th>\n",
+       "      <td id=\"T_86350_row5_col0\" class=\"data row5 col0\" >6.05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row6\" class=\"row_heading level0 row6\" >lua</th>\n",
+       "      <td id=\"T_86350_row6_col0\" class=\"data row6 col0\" >9.10</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row7\" class=\"row_heading level0 row7\" >lisp</th>\n",
+       "      <td id=\"T_86350_row7_col0\" class=\"data row7 col0\" >140.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row8\" class=\"row_heading level0 row8\" >elixir</th>\n",
+       "      <td id=\"T_86350_row8_col0\" class=\"data row8 col0\" >9.35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row9\" class=\"row_heading level0 row9\" >java</th>\n",
+       "      <td id=\"T_86350_row9_col0\" class=\"data row9 col0\" >9.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row10\" class=\"row_heading level0 row10\" >rust</th>\n",
+       "      <td id=\"T_86350_row10_col0\" class=\"data row10 col0\" >2.02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row11\" class=\"row_heading level0 row11\" >kotlin</th>\n",
+       "      <td id=\"T_86350_row11_col0\" class=\"data row11 col0\" >2.84</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row12\" class=\"row_heading level0 row12\" >swift</th>\n",
+       "      <td id=\"T_86350_row12_col0\" class=\"data row12 col0\" >6.90</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row13\" class=\"row_heading level0 row13\" >typescript</th>\n",
+       "      <td id=\"T_86350_row13_col0\" class=\"data row13 col0\" >2.71</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_86350_level0_row14\" class=\"row_heading level0 row14\" >python</th>\n",
+       "      <td id=\"T_86350_row14_col0\" class=\"data row14 col0\" >3.78</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n"
+      ],
       "text/plain": [
-       "cpu_energy             7.553645e-07\n",
-       "ram_energy             3.181431e-08\n",
-       "total_energy           7.897642e-07\n",
-       "normed_total_energy    1.000000e+00\n",
-       "dtype: float64"
+       "<pandas.io.formats.style.Styler at 0x7fbf35fbe2c0>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df2.min()"
+    "def highlight_max(s):\n",
+    "    '''\n",
+    "    Highlight the maximum in a Series yellow.\n",
+    "    '''\n",
+    "    is_max = s == s.max()\n",
+    "    return ['background-color: lightgreen' if v else '' for v in is_max]\n",
+    "\n",
+    "styled_df = (df2[[\"normed_total_energy\"]].style\n",
+    "             .format(precision=2, na_rep='MISSING')\n",
+    "             .apply(highlight_max)\n",
+    "             .set_caption(\"Energy Consumption in kWh\")\n",
+    "             .set_properties(**{'background-color': 'white', 'color': 'black', 'border-color': 'black'})\n",
+    "             .set_table_styles([{\n",
+    "                 'selector': 'caption',\n",
+    "                 'props': [\n",
+    "                     ('color', 'black'),\n",
+    "                     ('font-size', '16px'),\n",
+    "                     ('text-align', 'center')\n",
+    "                 ]\n",
+    "             }, {\n",
+    "                 'selector': 'th',\n",
+    "                 'props': [\n",
+    "                     ('background-color', 'darkgreen'),\n",
+    "                     ('color', 'white'),\n",
+    "                     ('font-size', '14px')\n",
+    "                 ]\n",
+    "             }, {\n",
+    "                 'selector': 'td',\n",
+    "                 'props': [\n",
+    "                     ('font-size', '12px')\n",
+    "                 ]\n",
+    "             }])\n",
+    "            )\n",
+    "\n",
+    "# Display styled DataFrame\n",
+    "styled_df"
    ]
   },
   {
