--- a/cpp_on_sea/monte_carlo_pi/analysis.ipynb
+++ b/cpp_on_sea/monte_carlo_pi/analysis.ipynb
@@ -925,6 +925,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.003481714399221788"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_val * 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
